# Kursy-UWr

./: README.md
Analiza numeryczna 2024/Programy/: L9.9.py
Analiza numeryczna 2024/Programy/L11.8/: covid_data.csv
Analiza numeryczna 2024/Programy/L8.9/: main.py
Analiza numeryczna/Programy/: L12.10.py  L12.6.py  L8.7 - Cubic Spline (NIFS3).py
Analiza numeryczna/Programy/L11.7/: main.py  main2.py
Analiza numeryczna/Programy/L11.8/: main.py
Architektury systemów komputerowych/Listy zadań/: ask22_lista_13.tgz
Kurs języka Java/zad3/: Main.java
Kurs języka Java/zad4/obliczenia/: Dodawanie.java  Dzielenie.java  Exp.java  Liczba.java  Logarytm.java  Mnozenie.java  Odejmowanie.java  Stala.java
Kurs języka Java/zad4/struktury/: Zbior.java  ZbiorListowy.java  ZbiorTablicowy.java
Kurs języka Java/zad5/: NumberGuessingGame.java
Kurs języka Java/zad6/: Kreska.java  Powierzchnia.java  RysunekAplikacja.java
Kurs języka C++/Rozwiazania/Lista 01/: rzymskie.cpp
Kurs języka C++/Rozwiazania/Lista 02/: line.cpp  line.hpp  main.cpp  point.cpp  point.hpp  triangle.cpp  triangle.hpp
Kurs języka C++/Rozwiazania/Lista 03/: main.cpp  number.cpp  number.hpp
Kurs języka C++/Rozwiazania/Lista 04/: main.cpp  tabbit.cpp  tabbit.hpp
Kurs języka C++/Rozwiazania/Lista 06/: expression.cpp  (+2 more)
Metody Programowania/: Lista01.rkt  Lista03.rkt  Lista2.rkt
Metody Programowania/Projekt01/: solution.ml
Metody Programowania/Projekt02/: solution.mli
Metody Programowania/Rozwiązania/lista10/func/src/: dune  prefix.ml  rpn.ml
Programowanie Obiektowe/Projekt/: opis.txt
(+372 files in other folders)
